# decoy

./: :w  Cargo.toml  README.md  flake.nix
src/: ctx.rs  file_ops.rs  lib.rs  main.rs  options.rs  prompts.rs
src/files/: frontmatter.rs  mod.rs  note.rs  operations.rs  types.rs
src/options/: editor.rs  mod.rs  opts.rs
