[package]
name = "decoy"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
colored = "3.0.0"
fuzzy-matcher = "0.3.7"
inquire = { version = "0.7.5", features = ["date"] }
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
tap = "1.0.1"
toml = "0.9.5"
